# cloudfreak

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cf-scanner.py  output.json  pyproject.toml  scanner.py
.github/: dependabot.yaml
.github/workflows/: checks-python.yml  checks-terraform.yml
data/: ftp_banners.xml  http_servers.xml  ssh_banners.xml
infra/: .terraform.lock.hcl  terraform.tf  variables.tf  worker.tf
infra/workers/: v1.js
